# pytest-structlog-issue-example

./: pyproject.toml
example/: logic.py
tests/: test_logic.py
